# circpush

./: .gitignore  Cargo.toml  Makefile  README.rst  REUSE.toml  codecov.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: CI.yml  test.yml  wheels.yml
circpush/: __init__.py  cli.py
scripts/: check_test_artifacts.py  rmdir.py  rmdir_test_config.py
src/: board.rs  cli.rs  commands.rs  filetree.rs  lib.rs  link.rs  monitor.rs  server.rs  tcp.rs  workspace.rs
src/tcp/: client.rs  server.rs
tests/assets/monitors/: testmon.json  testmon2.json
tests/assets/workspaces/: examplews.json  nodescription.json  testws.json
