[package]
name = "circpush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "circpush"
crate-type = ["cdylib"]

[dependencies]
dirs = "5.0.1"
glob = "0.3.1"
pyo3 = "0.22.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
# [target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }
