[package]
name = "circpush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "circpush"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
dirs = "5.0.1"
filetime = "0.2.25"
glob = "0.3.1"
pathdiff = "0.2.2"
pyo3 = "0.22.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sysinfo = "0.32.1"
tabled = "0.17.0"

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }
