# SPDX-FileCopyrightText: 2025 Alec Delaney
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "maturin>=1.7,<2.0",
    "setuptools",
    "setuptools-scm",
]
build-backend = "maturin"

[project]
name = "circpush"
# description = ""
requires-python = ">=3.9"
readme = "README.rst"
authors = [
    {name = "Alec Delaney", email = "tekktrik@gmail.com"}
]
# urls = {  }
# keywords = []
# license = { file = "" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.scripts]
circpush = "circpush:cli"

[tool.setuptools]
packages = ["circpush"]

[tool.setuptools.package-data]
templates = ["*.yaml"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"]}}

[tool.maturin]
features = ["pyo3/extension-module"]
